tdf#91261: DOCX import: snapGrid property of paragraphs are ignored

Fix the situation for OOXML import filter:
a) While handling DocGrid type, SnapToChars was treated as
   None. Now it is implemented as described in the article:
http://linpeifeng.blogspot.tw/2007/02/text-grid-enhancement.html
   Both LinesAndChars and SnapToChars will be translated to
   Writer grid type  "lines and characters", and set SnapToGrid
   property to false or true accordingly.

b) All the imported paragraphs snap to grid because SnapToGrid was
   appended to grabbag, now it allows SnapToGrid property in
   paragraph and paragraph styles to be imported properly.

Reviewed-on: https://gerrit.libreoffice.org/15732
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit b7c8c337d4ffad55fe111c9634c4c04afce78bad)

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx

Change-Id: I446b4c64c0ed86960896bcd61a1006c9173a757a
Reviewed-on: https://gerrit.libreoffice.org/15843
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>